este comit es el bueno:) para el master que le sabe

--- a/views/layouts/layout-index.ejs
+++ b/views/layouts/layout-index.ejs
@@ -1,15 +1,15 @@
 
-  <link rel="stylesheet" href="../css/index-style.css">
+<link rel="stylesheet" href="../css/index-style.css">
 
-  <nav>
+<nav>
 
-    <a href="#">SOBRE NOSOTROS</a>
-    <a href="#">CONTACTOS</a>
-    <a href="#">NOTICIAS</a>
-    <div id="indicator"></div>
-    <div id="color-line"></div>
-    <div class="logo-container">
-        <a href="/index"><img class="logo" src="https://storage.googleapis.com/primerstorage/logo_sin_fondo-removebg-preview.png" alt="Logo de la empresa"></a>
-      </div>
-  </nav>
+  <a href="#about">SOBRE NOSOTROS</a>
+  <a href="#service">SERVICIOS</a>
+  <a href="#contact">CONTACTOS</a>
+  <div id="#indicator"></div>
+  <div id="color-line"></div>
+  <div class="logo-container">
+      <a href="/index"><img class="logo" src="https://storage.googleapis.com/primerstorage/logo_sin_fondo-removebg-preview.png" alt="Logo de la empresa"></a>
+    </div>
+</nav>
 
