--- a/public/css/login-style.css
+++ b/public/css/login-style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    background-image: url('https://storage.googleapis.com/primerstorage/logo%20bufete.png');
+    background-image: url('https://storage.googleapis.com/primerstorage/loginlogo.png');
     background-color: #ffffff;
     background-repeat: no-repeat;
     background-position: center;
@@ -51,12 +51,12 @@ header h2 {
 
 header p {
     letter-spacing: 0.05em;
-    color: #7f8c8d;
+    color: #502222;
 }
 
 .input-item {
     background: #ffffff;
-    color: #333;
+    color: #3e0808;
     padding: 14.5px 0px 15px 9px;
     border-radius: 5px 0px 0px 5px;
 }
@@ -83,11 +83,12 @@ input[class="form-input"] {
     padding: 15px;
     font-size: 16px;
     font-family: 'Abel', sans-serif;
-    color: #5E6472;
+    color: #000000;
     outline: none;
     border: none;
     border-radius: 0px 5px 5px 0px;
     transition: 0.2s linear;
+    
 }
 
 input[id="txt-input"] {
@@ -102,11 +103,11 @@ input:focus {
 
 button {
     display: inline-block;
-    color: #252537;
+    color: #f5f5f5;
     width: 280px;
     height: 50px;
     padding: 0 20px;
-    background: #ffffff;
+    background: #120101;
     border-radius: 5px;
     outline: none;
     border: none;
@@ -124,34 +125,7 @@ button {
     margin-left: 2%;
 }
 
-.frgt-pass {
-    background: transparent;
-    position: relative;
-    bottom: 240px;
-    left: 200px;
-    @media (max-width: 767px) {
-        bottom: auto;
-        left: auto;
-        text-align: center;
-        margin-top: 10px;
-    }
-}
 
-.sign-up {
-    background: #34495e;
-    position: relative;
-    width: 15%;
-    height: 70px;
-    bottom: 250px;
-    right: 70px;
-    @media (max-width: 767px) {
-        bottom: auto;
-        right: auto;
-        width: 100%;
-        text-align: center;
-        margin-top: 10px;
-    }
-}
 
 
 button:hover {
@@ -186,10 +160,39 @@ button:hover {
     color: #721c24;
     border-color: #f5c6cb;
 }
+
 .error-message {
     color: red;
     font-size: 14px;
     margin-bottom: 10px;
     display: none;
 }
+a {
+    display: inline-block;
+    padding: 10px 20px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    text-decoration: none;
+    font-weight: bold;
+    color: #fff;
+    background-color: #690c0c;
+    transition: background-color 0.3s ease;
+  }
   
+  a:hover {
+    background-color: #f0e6e6;
+  }
+  
+  @media screen and (max-width: 600px) {
+    a {
+      display: block;
+      width: 100%;
+      margin-bottom: 10px;
+    }
+  }
+  .other {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+    
