--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,6 +7,22 @@
    <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'>
    <link rel="stylesheet" href="../css/login-style.css">
    <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+   <script>
+      function togglePassword() {
+  var passwordField = document.getElementById("pwd");
+  var eyeIcon = document.getElementById("eye");
+
+  if (passwordField.type === "password") {
+    passwordField.type = "text";
+    eyeIcon.className = "fa fa-eye-slash";
+  } else {
+    passwordField.type = "password";
+    eyeIcon.className = "fa fa-eye";
+  }
+}
+
+
+   </script>
 </head>
 
 <body>
@@ -32,19 +48,21 @@
 
                <span class="input-item"><i class="fa fa-key"></i></span>
                <input class="form-input" type="password" placeholder="Password" id="pwd" name="password" required <% if (disableInputs) { %>disabled<% } %> >
+<span><i class="fa fa-eye" aria-hidden="true" type="button" id="eye" onclick="togglePassword()"></i></span>
 
-               <span><i class="fa fa-eye" aria-hidden="true" type="button" id="eye"></i></span>
                <br>
                <div id="error-message" class="error-message"></div>
                  <br>
                  <button type="submit" class="log-in" id="submit-button" <%= error && error.length > 0 && error[0].startsWith('Demasiadas solicitudes') ? 'disabled' : '' %> > Iniciar sesion </button>
             </div>
          </div>
-      </form>
-      <div class="other">
-         <button class="btn submits frgt-pass">Forgot Password</button>
-         <a href="/signup"><button  class="btn submits sign-up">Registrarse</button></a>
+         <div class="other">
+            <a href="">Forgot Password</a>
+         <a href="/signup">Registrarse</a>
       </div>
+ 
+      </form>
+      <h1 style="width: 250px; height: 55px; font-size: medium; position: relative; left: 42%; bottom: 120px;">nota: al registrarte te enviaran un link de verificacion al correo que ingresaste, da click a ese enlace y podras completar el login</h1>
    </div>
 
 </body>
