--- a/public/css/signup-style.css
+++ b/public/css/signup-style.css
@@ -1,212 +1,311 @@
-@import url('https://fonts.googleapis.com/css?family=Abel|Abril+Fatface|Alegreya|Arima+Madurai|Dancing+Script|Dosis|Merriweather|Oleo+Script|Overlock|PT+Serif|Pacifico|Playball|Playfair+Display|Share|Unica+One|Vibur');
-
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+@import url(https://fonts.googleapis.com/css?family=Cookie|Raleway:300,700,400);
+*{
+	box-sizing: border-box;
+	font-size: 1em;
+	margin: 0;
+	padding: 0;
 }
-
 body {
-    /*background-image: url('https://storage.googleapis.com/primerstorage/loginlogo.png'); */
-
-    background-color: #080710;
-    background-repeat: no-repeat;
-    background-position: center;
-    font-family: 'Vibur', cursive;
-    font-family: 'Abel', sans-serif;
-    opacity: .95;
-    background-size: cover;
+  background-image: url('https://blog.lemontech.com/wp-content/uploads/2021/01/frases-de-abogados.jpg');
+  /* background-image: linear-gradient(-225deg, #f39bd9 0%, #180206 100%);*/
+  /* background-image: linear-gradient(to top, #48504f 0%, #8f2525 100%);*/
+  background-repeat: no-repeat;
+  background-position: absolute;
+  font-family: 'Vibur', cursive;
+  font-family: 'Abel', sans-serif;
+  opacity: 0.95;
+  background-size: cover;
 }
-
-form {
-    width: 450px;
-    min-height: 500px;
-    height: auto;
-    border-radius: 5px;
-    margin: 2% auto;
-    box-shadow: 0 9px 50px hsla(20, 67%, 75%, 0.31);
-    padding: 2%;
-    background-color: #f5f5f5;
-}
-
-form .con {
-    display: -webkit-flex;
-    display: flex;
-    -webkit-justify-content: space-around;
-    justify-content: space-around;
-    -webkit-flex-wrap: wrap;
-    flex-wrap: wrap;
-    margin: 0 auto;
-}
-
 .container {
-    max-width: 600px;
-    margin: 0 auto;
-    padding: 50px 0;
-  }
-  
-  .form {
-    background-color: #fff;
-    border-radius: 5px;
-    padding: 20px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  }
-  
-  .form h2 {
-    text-align: center;
-    margin-bottom: 30px;
-  }
-  
-  .form-group {
-    margin-bottom: 20px;
-  }
-  
-  .form-group label {
-    font-weight: 600;
-  }
-  
-  .form-control {
-    display: block;
-    width: 100%;
-    padding: 10px;
-    font-size: 16px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-  }
-  
-  .btn {
-    display: block;
-    width: 100%;
-    padding: 10px;
-    font-size: 16px;
-    border-radius: 5px;
-    border: none;
-    background-color: #000000;
-    color: #fff;
-    cursor: pointer;
-  }
-  
-  .btn:hover {
-    background-color: #3b0202;
-  }
-  .drop-area {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: #f5f5f5;
-    border: 2px dashed #bbb;
-    cursor: pointer;
-  }
-  
-  .drop-area input[type="file"] {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    opacity: 0;
-    cursor: pointer;
-  }
-  
-  .choose-file {
-    padding: 8px 20px;
-    background-color: #570202;
-    color: #fff;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-  }
-  
-  .choose-file:hover {
-    background-color: #0069d9;
-  }
-  
-  .choose-file:active {
-    background-color: #005fcc;
-  }
-  
-  .drop-area p {
-    margin-top: 10px;
-    font-size: 14px;
-    color: #999;
-  }
-  
-  #image-preview {
-    height: 200px;
-    margin-bottom: 20px;
-    position: relative;
-    overflow: hidden;
-  }
-  
-  #preview-image {
-    max-width: 100%;
-    max-height: 100%;
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-  }
-  
-  /* Estilos para el contenedor de la imagen */
+  border-radius: 0.5em;
+  box-shadow: 0 0 1em 0 rgba(51, 51, 51, 0.25);
+  display: block;
+  max-width: 480px;
+  overflow: hidden;
+  margin: 0 auto; /* Para centrar horizontalmente */
+  margin-top: 100px; /* Ajusta el valor según sea necesario */
+  padding: 2em;
+  position: relative;
+  z-index: 1;
+  background-color: rgba(255, 255, 255, 0.6); /* Hace el formulario visible */
+}
+
+.container:before {
+  content: '';
+  background: url('https://blog.lemontech.com/wp-content/uploads/2021/01/frases-de-abogados.jpg') center no-repeat;
+  background-size: cover;
+  -webkit-filter: blur(10px);
+  filter: blur(10px);
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  width: 100%;
+}
+.container:after{
+	background: rgba(255,255,255,0.6);
+	content: '';
+	display: block;
+	height: 100%;
+	position: absolute;
+		top: 0;
+		left: 0;
+		z-index: -1;
+	width: 100%;
+}
+form button.submit{
+	background: rgba(255,255,255,0.25);
+	border: 1px solid #333;
+	line-height: 1em;
+	padding: 0.5em 0.5em;
+	-webkit-transition: all 0.25s;
+	transition: all 0.25s;
+}
+form button:hover,
+form button:focus,
+form button:active,
+form button.loading{
+	background: #333;
+	color: #fff;
+	outline: none;
+}
+form button.success{
+	background: #27ae60;
+	border-color: #27ae60; 
+	color: #fff;
+}
+@-webkit-keyframes spin{
+	from{ transform: rotate(0deg); }
+	to{ transform: rotate(360deg); }
+}
+@keyframes spin{
+	from{ transform: rotate(0deg); }
+	to{ transform: rotate(360deg); }
+}
+form button span.loading-spinner{
+	-webkit-animation: spin 0.5s linear infinite;
+	animation: spin 0.5s linear infinite;
+	border: 2px solid #fff;
+	border-top-color: transparent;
+	border-radius: 50%;
+	display: inline-block;
+	height: 1em;
+	width: 1em;
+}
+
+form label{
+	border-bottom: 1px solid #333;
+	display: block;
+	font-size: 1.25em;
+	margin-bottom: 0.5em;
+	-webkit-transition: all 0.25s;
+	transition: all 0.25s;
+}
+form label.col-one-half{
+	float: left;
+	width: 50%;
+}
+form label.col-one-half:nth-of-type(even){
+	border-left: 1px solid #333;
+	padding-left: 0.25em;
+}
+form label input{
+	background: none;
+	border: none;
+	line-height: 1em;
+	font-weight: 300;
+	padding: 0.125em 0.25em;
+	width: 100%;
+}
+form label input:focus{
+	outline: none;
+}
+form label input:-webkit-autofill{
+	background-color: transparent !important;
+}
+form label span.label-text{
+	display: block;
+	font-size: 0.5em;
+	font-weight: bold;
+	padding-left: 0.5em;
+	text-transform: uppercase;
+	-webkit-transition: all 0.25s;
+	transition: all 0.25s;
+}
+form label.checkbox{
+	border-bottom: 0;
+	text-align: center;
+}
+form label.checkbox input{
+	display: none;
+}
+form label.checkbox span{
+	font-size: 0.5em;
+}
+form label.checkbox span:before{
+	content: '\e157';
+	display: inline-block;
+	font-family: 'Glyphicons Halflings';
+	font-size: 1.125em;
+	padding-right: 0.25em;
+	position: relative;
+		top: 1px;
+}
+form label.checkbox input:checked + span:before{content: '\e067';}
+form label.invalid{border-color: #c0392b !important;}
+form label.invalid span.label-text{color: #c0392b;}
+form label.password{position: relative;}
+form label.password button.toggle-visibility{
+	background: none;
+	border: none;
+	cursor: pointer;
+	font-size: 0.80em;
+	line-height: 1em;
+	position: absolute;
+		top: 50%;
+		right: 0.5em;
+	text-align: center;
+	-webkit-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
+	transform: translateY(-50%);
+	-webkit-transition: all 0.25s;
+	transition: all 0.25s;
+}
+form label.password button.toggle-visibility:hover,
+form label.password button.toggle-visibility:focus,
+form label.password button.toggle-visibility:active{
+	color: #000;
+	outline: none;
+}
+form label.password button.toggle-visibility span{vertical-align: middle;}
+
+h1{
+	font-size: 3em;
+	margin: 0 0 0.5em 0;
+	text-align: center;
+	font-family: 'Cookie', cursive;
+}
+h1 img{
+	height: auto;
+	margin: 0 auto;
+	max-width: 240px;
+	width: 100%;
+}
+html{
+	font-size: 18px;
+	height: 270%;
+}
+
+.text-center{
+	text-align: center;
+}
+
+.drop-area {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #f5f5f5;
+  border: 2px dashed #bbb;
+  cursor: pointer;
+}
+
+.drop-area input[type="file"] {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  cursor: pointer;
+}
+
+.choose-file {
+  padding: 8px 20px;
+  background-color: #570202;
+  color: #fff;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.choose-file:hover {
+  background-color: #0069d9;
+}
+
+.choose-file:active {
+  background-color: #005fcc;
+}
+
+.drop-area p {
+  margin-top: 10px;
+  font-size: 14px;
+  color: #999;
+}
+
 .image-preview {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 250px;
-    border: 2px dashed #bbb;
-    margin-bottom: 20px;
-    position: relative;
-  }
-  
-  /* Estilos para el texto dentro del contenedor de la imagen */
-  .image-preview p {
-    margin-top: 10px;
-    font-size: 14px;
-    color: #999;
-  }
-  
-  /* Estilos cuando se arrastra un archivo */
-  .image-preview-dragover {
-    border-color: #333;
-  }
-  
-  /* Estilos cuando se ha subido una imagen */
-  .image-preview-active {
-    border-color: #00a0d2;
-  }
-  
-  /* Estilos para la imagen previa */
-  #preview-image {
-    max-width: 100%;
-    max-height: 100%;
-    display: none;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
-  /*estilo para botno flotante */
- 
-
-.float{
-	position:fixed;
-	width:60px;
-	height:60px;
-	bottom:40px;
-	right:40px;
-	background-color:rgb(105, 109, 108);
-	color:#FFF;
-	border-radius:50px;
-	text-align:center;
-	box-shadow: 2px 2px 3px #999;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 250px;
+  border: 2px dashed #bbb;
+  margin-bottom: 20px;
+  position: relative;
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 20px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  transition: border-color 0.3s ease;
 }
 
-.my-float{
-	margin-top:22px;
+.image-preview p {
+  margin-top: 10px;
+  font-size: 14px;
+  color: #999;
 }
-  
+
+.image-preview-dragover {
+  border-color: #333;
+}
+
+.image-preview-active {
+  border-color: #00a0d2;
+}
+
+#preview-image {
+  max-width: 100%;
+  max-height: 100%;
+  display: none;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.float {
+  position: fixed;
+  width: 60px;
+  height: 60px;
+  bottom: 40px;
+  right: 40px;
+  background-color: rgb(105, 109, 108);
+  color: #000000;
+  border-radius: 50px;
+  text-align: center;
+  box-shadow: 2px 2px 3px #999;
+  transition: background-color 0.3s ease;
+}
+
+.my-float {
+  margin-top: 22px;
+}
+
+.float:hover {
+  background-color: #3b0202;
+  animation: pulse 0.4s ease-in-out infinite alternate;
+}
