--- a/views/login.ejs
+++ b/views/login.ejs
@@ -38,18 +38,18 @@
          </div>
        <% } %>
        <h3>Inicio de sesión</h3>
-   
+       
        <label for="username">Nombre de usuario</label>
        <input type="text" name="username" placeholder="Usuario123" id="username" <% if (disableInputs) { %>disabled<% } %>>
    
        <label for="password">Contraseña</label>
        <input type="password"name="password" placeholder="Contraseña123" id="password" <% if (disableInputs) { %>disabled<% } %>>
        <span><i class="fa fa-eye" aria-hidden="true" type="button" id="eye" onclick="togglePassword()"></i></span>
-   
-      
+  
        <button type="submit" <%= error && error.length > 0 && error[0].startsWith('Demasiadas solicitudes') ? 'disabled' : '' %> > Iniciar sesion </button>
-       <div class="social">
-         <div class="go"><i class=""></i><a href="/signup">Registrate</a></div>
+       <div class="">
+        
+         <div class="go"><i class="">Bienvenid@! eres nuev@?</i><a href="/signup"> Registrate aqui</a></div>
        </div>
      </form>
    </body>
