--- a/public/css/signup-style.css
+++ b/public/css/signup-style.css
@@ -1,39 +1,72 @@
 @import url(https://fonts.googleapis.com/css?family=Cookie|Raleway:300,700,400);
-*{
-	box-sizing: border-box;
-	font-size: 1em;
-	margin: 0;
-	padding: 0;
+
+* {
+  box-sizing: border-box;
+  font-size: 1em;
+  margin: 0;
+  padding: 0;
 }
+
 body {
-  background-image: url('https://blog.lemontech.com/wp-content/uploads/2021/01/frases-de-abogados.jpg');
-  /* background-image: linear-gradient(-225deg, #f39bd9 0%, #180206 100%);*/
-  /* background-image: linear-gradient(to top, #48504f 0%, #8f2525 100%);*/
-  background-repeat: no-repeat;
-  background-position: absolute;
-  font-family: 'Vibur', cursive;
-  font-family: 'Abel', sans-serif;
-  opacity: 0.95;
-  background-size: cover;
+	position: relative;
+  }
+  
+  body::after {
+	content: "";
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-image: url("https://storage.googleapis.com/primerstorage/logorene.png");
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+	filter: blur(10px);
+	z-index: -1;
+  }
+  
+
+.background {
+	
+  width: 100%;
+  max-width: 430px;
+  height: 520px;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  left: 50%;
+  top: 50%;
 }
+
+.background .shape {
+  height: 200px;
+  width: 200px;
+  position: absolute;
+  border-radius: 50%;
+}
+
 .container {
+	
   border-radius: 0.5em;
   box-shadow: 0 0 1em 0 rgba(51, 51, 51, 0.25);
   display: block;
-  max-width: 480px;
+  max-width: 780px;
   overflow: hidden;
   margin: 0 auto; /* Para centrar horizontalmente */
   margin-top: 100px; /* Ajusta el valor según sea necesario */
   padding: 2em;
   position: relative;
   z-index: 1;
-  background-color: rgba(255, 255, 255, 0.6); /* Hace el formulario visible */
+  
 }
+
 
 .container:before {
   content: '';
-  background: url('https://blog.lemontech.com/wp-content/uploads/2021/01/frases-de-abogados.jpg') center no-repeat;
-  background-size: cover;
+  backdrop-filter: blur(10px);
+  border: 2px solid rgba(255, 255, 255, 0.1);
+  box-shadow: 0 0 40px rgba(8, 7, 16, 0.6);
+  background-color: rgba(255, 255, 255, 0.1);
   -webkit-filter: blur(10px);
   filter: blur(10px);
   height: 100vh;
@@ -43,162 +76,207 @@ body {
   z-index: -1;
   width: 100%;
 }
-.container:after{
-	background: rgba(255,255,255,0.6);
-	content: '';
-	display: block;
-	height: 100%;
-	position: absolute;
-		top: 0;
-		left: 0;
-		z-index: -1;
-	width: 100%;
+
+.container:after {
+	
+  background: rgba(255, 255, 255, 0.6);
+  content: '';
+  display: block;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  width: 100%;
 }
-form button.submit{
-	background: rgba(255,255,255,0.25);
-	border: 1px solid #333;
-	line-height: 1em;
-	padding: 0.5em 0.5em;
-	-webkit-transition: all 0.25s;
-	transition: all 0.25s;
+
+form button.submit {
+  background: rgba(255, 255, 255, 0.25);
+  border: 1px solid #333;
+  line-height: 1em;
+  padding: 0.5em 0.5em;
+  -webkit-transition: all 0.25s;
+  transition: all 0.25s;
 }
+
 form button:hover,
 form button:focus,
 form button:active,
-form button.loading{
-	background: #333;
-	color: #fff;
-	outline: none;
-}
-form button.success{
-	background: #27ae60;
-	border-color: #27ae60; 
-	color: #fff;
-}
-@-webkit-keyframes spin{
-	from{ transform: rotate(0deg); }
-	to{ transform: rotate(360deg); }
-}
-@keyframes spin{
-	from{ transform: rotate(0deg); }
-	to{ transform: rotate(360deg); }
-}
-form button span.loading-spinner{
-	-webkit-animation: spin 0.5s linear infinite;
-	animation: spin 0.5s linear infinite;
-	border: 2px solid #fff;
-	border-top-color: transparent;
-	border-radius: 50%;
-	display: inline-block;
-	height: 1em;
-	width: 1em;
+form button.loading {
+  background: #333;
+  color: #fff;
+  outline: none;
 }
 
-form label{
-	border-bottom: 1px solid #333;
-	display: block;
-	font-size: 1.25em;
-	margin-bottom: 0.5em;
-	-webkit-transition: all 0.25s;
-	transition: all 0.25s;
+form button.success {
+  background: #27ae60;
+  border-color: #27ae60;
+  color: #fff;
 }
-form label.col-one-half{
-	float: left;
-	width: 50%;
+
+@-webkit-keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
-form label.col-one-half:nth-of-type(even){
-	border-left: 1px solid #333;
-	padding-left: 0.25em;
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
-form label input{
-	background: none;
-	border: none;
-	line-height: 1em;
-	font-weight: 300;
-	padding: 0.125em 0.25em;
-	width: 100%;
+
+form button span.loading-spinner {
+  -webkit-animation: spin 0.5s linear infinite;
+  animation: spin 0.5s linear infinite;
+  border: 2px solid #fff;
+  border-top-color: transparent;
+  border-radius: 50%;
+  display: inline-block;
+  height: 1em;
+  width: 1em;
 }
-form label input:focus{
-	outline: none;
+
+form label {
+  border-bottom: 1px solid #333;
+  display: block;
+  font-size: 1.25em;
+  margin-bottom: 0.5em;
+  -webkit-transition: all 0.25s;
+  transition: all 0.25s;
 }
-form label input:-webkit-autofill{
-	background-color: transparent !important;
+
+form label.col-one-half {
+  float: left;
+  width: 50%;
 }
-form label span.label-text{
-	display: block;
-	font-size: 0.5em;
-	font-weight: bold;
-	padding-left: 0.5em;
-	text-transform: uppercase;
-	-webkit-transition: all 0.25s;
-	transition: all 0.25s;
+
+form label.col-one-half:nth-of-type(even) {
+  border-left: 1px solid #333;
+  padding-left: 0.25em;
 }
-form label.checkbox{
-	border-bottom: 0;
-	text-align: center;
+
+form label input {
+  background: none;
+  border: none;
+  line-height: 1em;
+  font-weight: 300;
+  padding: 0.125em 0.25em;
+  width: 100%;
 }
-form label.checkbox input{
-	display: none;
+
+form label input:focus {
+  outline: none;
 }
-form label.checkbox span{
-	font-size: 0.5em;
+
+form label input:-webkit-autofill {
+  background-color: transparent !important;
 }
-form label.checkbox span:before{
-	content: '\e157';
-	display: inline-block;
-	font-family: 'Glyphicons Halflings';
-	font-size: 1.125em;
-	padding-right: 0.25em;
-	position: relative;
-		top: 1px;
+
+form label span.label-text {
+  display: block;
+  font-size: 0.5em;
+  font-weight: bold;
+  padding-left: 0.5em;
+  text-transform: uppercase;
+  -webkit-transition: all 0.25s;
+  transition: all 0.25s;
 }
-form label.checkbox input:checked + span:before{content: '\e067';}
-form label.invalid{border-color: #c0392b !important;}
-form label.invalid span.label-text{color: #c0392b;}
-form label.password{position: relative;}
-form label.password button.toggle-visibility{
-	background: none;
-	border: none;
-	cursor: pointer;
-	font-size: 0.80em;
-	line-height: 1em;
-	position: absolute;
-		top: 50%;
-		right: 0.5em;
-	text-align: center;
-	-webkit-transform: translateY(-50%);
-	-ms-transform: translateY(-50%);
-	transform: translateY(-50%);
-	-webkit-transition: all 0.25s;
-	transition: all 0.25s;
+
+form label.checkbox {
+  border-bottom: 0;
+  text-align: center;
 }
+
+form label.checkbox input {
+  display: none;
+}
+
+form label.checkbox span {
+  font-size: 0.5em;
+}
+
+form label.checkbox span:before {
+  content: '\e157';
+  display: inline-block;
+  font-family: 'Glyphicons Halflings';
+  font-size: 1.125em;
+  padding-right: 0.25em;
+  position: relative;
+  top: 1px;
+}
+
+form label.checkbox input:checked + span:before {
+  content: '\e067';
+}
+
+form label.invalid {
+  border-color: #c0392b !important;
+}
+
+form label.invalid span.label-text {
+  color: #c0392b;
+}
+
+form label.password {
+  position: relative;
+}
+
+form label.password button.toggle-visibility {
+  background: none;
+  border: none;
+  cursor: pointer;
+  font-size: 0.80em;
+  line-height: 1em;
+  position: absolute;
+  top: 50%;
+  right: 0.5em;
+  text-align: center;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  -webkit-transition: all 0.25s;
+  transition: all 0.25s;
+}
+
 form label.password button.toggle-visibility:hover,
 form label.password button.toggle-visibility:focus,
-form label.password button.toggle-visibility:active{
-	color: #000;
-	outline: none;
-}
-form label.password button.toggle-visibility span{vertical-align: middle;}
-
-h1{
-	font-size: 3em;
-	margin: 0 0 0.5em 0;
-	text-align: center;
-	font-family: 'Cookie', cursive;
-}
-h1 img{
-	height: auto;
-	margin: 0 auto;
-	max-width: 240px;
-	width: 100%;
-}
-html{
-	font-size: 18px;
-	height: 270%;
+form label.password button.toggle-visibility:active {
+  color: #000;
+  outline: none;
 }
 
-.text-center{
-	text-align: center;
+form label.password button.toggle-visibility span {
+  vertical-align: middle;
+}
+
+h1 {
+  font-size: 3em;
+  margin: 0 0 0.5em 0;
+  text-align: center;
+  font-family: 'Cookie', cursive;
+}
+
+h1 img {
+  height: auto;
+  margin: 0 auto;
+  max-width: 240px;
+  width: 100%;
+}
+
+html {
+  font-size: 18px;
+  height: 270%;
+}
+
+.text-center {
+  text-align: center;
 }
 
 .drop-area {
@@ -226,7 +304,7 @@ html{
 
 .choose-file {
   padding: 8px 20px;
-  background-color: #570202;
+  background-color: #942833;
   color: #fff;
   border-radius: 5px;
   cursor: pointer;
@@ -293,19 +371,18 @@ html{
   height: 60px;
   bottom: 40px;
   right: 40px;
-  background-color: rgb(105, 109, 108);
-  color: #000000;
+  background-color: #942833;
+  color: white;
   border-radius: 50px;
   text-align: center;
-  box-shadow: 2px 2px 3px #999;
+
   transition: background-color 0.3s ease;
+  text-decoration: none;
 }
 
-.my-float {
-  margin-top: 22px;
+  
+  .float:hover {
+	color: rgb(255, 255, 255); /* Cambia el color cuando se pasa el mouse sobre el enlace */
+	text-decoration: none;  
 }
-
-.float:hover {
-  background-color: #3b0202;
-  animation: pulse 0.4s ease-in-out infinite alternate;
-}
+  
