--- a/views/Citas.ejs
+++ b/views/Citas.ejs
@@ -8,9 +8,9 @@
     
   </head>
   <body>
-    
+    <%-include('../views/layouts/layoutP.ejs')%>
 
-    <div id="calendar"></div>
+    <div id="calendar" style="color:white"></div>
     <!-- En la vista 'Citas' -->
     
   
@@ -31,14 +31,21 @@
         <input type="text" id="title" name="motivo" required />
         <label for="date">Fecha:</label>
         <input type="text" id="date" name="fecha" readonly />
-        <label for="time">Hora (HH:mm):</label>
+        <label for="time">Hora Inicio (HH:mm):</label>
+        <label for="time">Hora Fin (HH:mm):</label>
         <input type="time" id="time" name="hora" min="08:00" max="18:00" step="1800" required />
         <button type="submit" id="save-event">Guardar</button>
       </form>
     </div>
   </div>
   <style>
+ .fc-day {
+    background-color: #b8b8b883;
+    border: none;
+    padding: 30px;
+  }
     .modal {
+      color: rgb(255, 255, 255);
       display: none;
       position: fixed;
       z-index: 1;
@@ -52,7 +59,8 @@
     }
   
     .modal-content {
-      background-color: #fefefe;
+      color: rgb(255, 255, 255);
+      background-color: #ffffff7a;
       margin: 15% auto;
       padding: 20px;
       border: 1px solid #888;
@@ -73,7 +81,6 @@
       cursor: pointer;
     }
   </style>
-  
   <div id="eventModal" class="modal">
     <div class="modal-content">
       <span id="eventClose" class="close">&times;</span>
@@ -81,6 +88,8 @@
       <p id="eventMotivo"></p>
       <p id="eventFecha"></p>
       <p id="eventHora"></p>
+      <p id="eventHoraFin"></p>
+      <p id="eventabogado"></p>
       <p id="eventEstado"></p>
     </div>
   </div>
