--- a/views/login.ejs
+++ b/views/login.ejs
@@ -23,14 +23,34 @@
               eyeIcon.className = "fa fa-eye";
             }
           }
+          
         </script>
+        <style>
+         
+
+        </style>
       </head>
   <body>
      <div class="background">
        <div class="shape"></div>
        <div class="shape"></div>
      </div>
+    
+     
+      <div class="background-container">
+        <div class="logo-container">
+          <img src="https://storage.googleapis.com/primerstorage/LogoA-removebg-preview.png" alt="Logo del bufete de abogados">
+          <div class="text-container">
+            <h1 style="color: white; font-family: 'Poppins',sans-serif;">Azurduy & Asociados</h1>
+          </div>
+        </div>
+      </div>
+    
+    
+    
+    
      <form action="/login" method="post">
+      
        <% const disableInputs = error && error.length > 0 && error[0].startsWith('Demasiadas solicitudes'); %>
        <% if (error && error.length > 0) { %>
          <div class="alert alert-danger" role="alert">
@@ -40,18 +60,21 @@
        <h3>Inicio de sesión</h3>
        
        <label for="username">Nombre de usuario</label>
-       <input type="text" name="username" placeholder="Usuario123" id="username" <% if (disableInputs) { %>disabled<% } %>>
+       <input type="text" name="username" maxlength="20" placeholder="Usuario123" id="username" <% if (disableInputs) { %>disabled<% } %>>
    
        <label for="password">Contraseña</label>
        <input type="password"name="password" placeholder="Contraseña123" id="password" <% if (disableInputs) { %>disabled<% } %>>
-       <span><i class="fa fa-eye" aria-hidden="true" type="button" id="eye" onclick="togglePassword()"></i></span>
+       <span><i class="fa fa-eye" aria-hidden="true"  maxlength="20" type="button" id="eye" onclick="togglePassword()"></i></span>
   
-       <button type="submit" <%= error && error.length > 0 && error[0].startsWith('Demasiadas solicitudes') ? 'disabled' : '' %> > Iniciar sesion </button>
+       <button type="submit" <%= error && error.length > 0 && error[0].startsWith('Demasiadas solicitudes') ? 'disabled' : '' %> > Iniciar sesión </button>
        <div class="">
         
          <div class="go"><i class="">Bienvenid@! eres nuev@?</i><a href="/signup"> Registrate aqui</a></div>
        </div>
      </form>
+     <a href="/index" class="float"><br>
+      <i class="fas fa-arrow-left" ><br> Atrás</i>
+    </a>
    </body>
   </html>
   
