--- a/views/Citas.ejs
+++ b/views/Citas.ejs
@@ -8,7 +8,13 @@
     
   </head>
   <body>
-    <%-include('../views/layouts/layoutP.ejs')%>
+    <style>
+
+    </style>
+    <div style="font-size: medium;">
+      <%-include('../views/layouts/layoutP.ejs')%>
+    </div>
+    
 
     <div id="calendar" style="color:white"></div>
     <!-- En la vista 'Citas' -->
@@ -40,9 +46,10 @@
   </div>
   <style>
  .fc-day {
-    background-color: #b8b8b883;
+    background-color: #000000d5;
     border: none;
     padding: 30px;
+    
   }
     .modal {
       color: rgb(255, 255, 255);
