--- a/views/layouts/layoutP.ejs
+++ b/views/layouts/layoutP.ejs
@@ -22,10 +22,10 @@
           <ul>
             <li><a href="/index">Inicio</a></li>
             <li><a href="/abogados">Nuestro Equipo</a></li>
-             <!-- <li><a href="/index">Servicios</a></li>
-            <li><a href="/index">Sobre Nosotros</a></li>
+             <li><a href="/index#four">¿Porqué elegirnos?</a></li>
+            <li><a href="/index#one">Sobre Nosotros</a></li>
             
-            <li><a href="/index">Contáctenos</a></li> <!-->
+            <li><a href="/index#footer">Contáctenos</a></li> 
             
             <% if (!user) { %>
               <li><a href="/signup" class="button fit">Regístrate</a></li>
